# tox-backtick

./: .buildinfo  .gitignore  CHANGES.html  CHANGES.rst  MANIFEST.in  README.html  README.rst  genindex.html  index.html  noxfile.py  objects.inv  output.json  pyproject.toml  search.html  searchindex.js
.doctrees/: CHANGES.doctree  README.doctree  environment.pickle  index.doctree
_sources/: index.rst.txt
_static/: bizstyle.js  documentation_options.js
docs/: index.rst
src/tox_backtick/: __about__.py  __init__.py  backquote.py  setenv.py  test.py
tests/: __init__.py  __main__.py  test.py  test_main.py  test_plugin.py
